# pybammsolvers

./: .gitignore  CMakeLists.txt  FindSUNDIALS.cmake  FindSuiteSparse.cmake  MANIFEST.in  README.md  install_KLU_Sundials.py  install_sundials.sh  noxfile.py  pyproject.toml  pytest.ini  setup.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: benchmarks.yml  build_wheels.yml  integration_tests.yml  pre-commit.yml  release.yml  unit_tests.yml
scripts/: install_KLU_Sundials.py
src/pybammsolvers/: __init__.py  idaklu.cpp
src/pybammsolvers/idaklu.cpython-312-darwin.so.dSYM/Contents/: Info.plist
src/pybammsolvers/idaklu.cpython-312-darwin.so.dSYM/Contents/Resources/Relocations/aarch64/: idaklu.cpython-312-darwin.so.yml
src/pybammsolvers/idaklu_source/: AlgebraicICBuilder.inl  HermiteKnotReducer.hpp  IDAInternals.hpp  IDAKLUSolverGroup.hpp  IDAKLUSolverOpenMP.hpp  IDAKLUSolverOpenMP.inl  IdakluJax.cpp  KnotReducer.hpp  LinearSolver.hpp  LinearSolver.inl  NewtonSolver.hpp  NewtonSolver.inl  NoProgressGuard.hpp  NonlinearSolver.hpp  NonlinearSolver.inl  Options.cpp  Options.hpp  Solution.hpp  SolutionData.cpp  SolutionData.hpp  StandaloneNewtonSolver.hpp  common.cpp  common.hpp  idaklu_solver.hpp  observe.cpp  observe.hpp  reduce.hpp  sundials_functions.hpp
src/pybammsolvers/idaklu_source/Expressions/Base/: ExpressionSet.hpp
src/pybammsolvers/idaklu_source/Expressions/Casadi/: CasadiFunctions.cpp  CasadiFunctions.hpp
src/pybammsolvers/solvers/: idaklu_jax.py  idaklu_solver.py
tests/: conftest.py  test_dummy.py  test_functions.py  test_integration.py  test_module.py  test_observe.py  test_performance.py  test_standalone_newton_solver.py  test_vectors.py
tests/pybamm_benchmarks/: README.md  arm_benchmark.py  run_benchmarks.py  test_pybamm_performance.py
tests/unit/: test_observe.py
