[build-system]
requires = [
    "scikit-build-core>=0.10",
    # On Windows, use the CasADi vcpkg registry and CMake bundled from MSVC
    "casadi>=3.6.7; platform_system!='Windows'",
    # Note: the version of CasADi as a build-time dependency should be matched
    # cross platforms, so updates to its minimum version here should be accompanied
    # by a version bump in https://github.com/pybamm-team/casadi-vcpkg-registry.
    "pybind11>=2.13.4",
]
build-backend = "scikit_build_core.build"

[project]
name = "pybammsolvers"
description = "Python interface for the IDAKLU solver"
requires-python = ">=3.9,<3.13"
license = { file = "LICENSE" }
version = "0.0.1"
dynamic = ["readme"]
dependencies = [
    "casadi",
    "numpy<2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "scikit-build-core",
]

[tool.scikit_build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
build.verbose = true
metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"

[tool.scikit-build.logging]
level = "INFO"

[tool.scikit-build.cmake]
version = ">=3.13"
build-type = "Release"

[tool.scikit-build.sdist]
include = ["src/pybammsolvers"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
