[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=3.0.1",
    # On Windows, use the CasADi vcpkg registry (CasADi is not pip-installable from PyPI for Windows)
    "casadi==3.7.2; platform_system!='Windows'",
    # Note: the version of CasADi as a build-time dependency should be matched
    # cross platforms, so updates to its minimum version here should be accompanied
    # by a version bump in https://github.com/pybamm-team/casadi-vcpkg-registry.
]
build-backend = "scikit_build_core.build"

[project]
name = "pybammsolvers"
description = "Python interface for the IDAKLU solver"
requires-python = ">=3.10,<3.15"
license-files = ["LICENSE"]
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "casadi==3.7.2",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "nox[uv]",
    "pytest",
    "pytest-cov",
    "psutil>=7.1.0",
    "wheel",
    # Build deps duplicated from [build-system].requires so they are present
    # in the venv after `pip install -e .[dev]`, letting scikit-build-core's
    # editable auto-rebuild (`editable.rebuild = true`) re-invoke CMake on
    # source change without re-resolving build isolation each import.
    "scikit-build-core>=0.10",
    "pybind11>=3.0.1",
    "cmake>=3.13",
    "ninja",
]

[tool.scikit-build]
cmake.version = ">=3.13"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/pybammsolvers"]
# C++ sources are compiled into the .so; they don't need to ship in the wheel.
wheel.exclude = ["pybammsolvers/idaklu.cpp", "pybammsolvers/idaklu_source/**"]
editable.mode = "redirect"
editable.rebuild = true
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "src/pybammsolvers/version.py"
metadata.version.regex = '''__version__\s*=\s*["'](?P<value>[^"']+)["']'''

[tool.scikit-build.cmake.define]
PYBAMM_IDAKLU_EXPR_CASADI = { env = "PYBAMM_IDAKLU_EXPR_CASADI", default = "ON" }

# sdist contains C++ sources + build config only. SUNDIALS/SuiteSparse are
# NOT vendored: source installs require either system-installed SUNDIALS and
# SuiteSparse, or a git clone with submodules so install_KLU_Sundials.py can
# build them. Bundling the submodules would inflate the sdist by ~400MB.
[tool.scikit-build.sdist]
include = [
    "CMakeLists.txt",
    "FindSuiteSparse.cmake",
    "FindSUNDIALS.cmake",
    "src/pybammsolvers/idaklu_source/**/*.hpp",
    "src/pybammsolvers/idaklu_source/**/*.cpp",
    "src/pybammsolvers/idaklu_source/**/*.inl",
    "src/pybammsolvers/idaklu.cpp",
    "install_KLU_Sundials.py",
    "vcpkg.json",
    "vcpkg-configuration.json",
]
